--- a/css/main_2.css
+++ b/css/main_2.css
@@ -96,14 +96,20 @@ textarea {
    ========================================================================== */
 body{
     margin: 0;
-    font-family: sans-serif;
   
 }
 header{
     width: 100%;
-    height: 20vw;
+    height: 20%;
     text-align: center;
-    margin: 0;
+}
+.hidden_header{
+     background:#ccc;
+       background-size: 100%;
+    width: 100%;
+    height: 10%;
+    text-align: left;
+    font-size:7vw;
 }
 
 
@@ -111,47 +117,47 @@ header{
 h1{
 
     text-align: center;
-    font-size: 10rem;
-    padding: 0;
-    margin: 0;
+    font-size: 10vw;
+    padding-top: 0;
     color: grey;
     animation: bounceIn 3s;
-}
-h2{
-    text-align: left;
-    font-size: 6rem;
-    margin: 0;
-    color: grey;
 }
 
 
 
 
 .top{
-    background:url('../pexels-photo-29773.jpg')no-repeat;
-    background-size: cover;
-    background-attachment: clip;
+    background: white;
     opacity: 0.7;
     font-size: 40px;
-    height: 100vw;
-    width: 100vw;
-    margin: 0;
-    padding: 0px;
+    height: 100%;
+    width: 100%;
+    margin-top: 0px;
+    padding-top: 0px;
+    position: absolute;
+    z-index: 2;
+
   
 }
 .back{
+       background:url('../pexels-photo-29773.jpg') no-repeat;
+       background-size: 100%;
+       bottom: 0;
+       right: 0;
+       height: 100%;
+       width: 100%;
+       margin: 0;
+       position: absolute;
+       z-index: 1;
 
-       height: 100vw;
-       width: 100vw;
-       margin: 0;  
+    
 }
 .main{
- width:100vw;
+     width:100%;
  height:10vw;
- padding-top: 70px;
+ padding-top: 80px;
  border: 2px solid white;
  background-color:#ccc;
- margin: 0;
  opacity: 0.8;
  text-align: center;
 }
@@ -162,80 +168,50 @@ h2{
 color:white;
  display: none;
  background-color:#ccc;
- margin: 0;
 }
 
 .div3 {
- width:100vw;
- height:5vw;
+ width:100%;
+ height:10vw;
  padding: 30px;
- display: none;
+display: none;
  align-content: center;
  text-align: center;
- margin: 0;
 }
-/* -------------------- Select Box Styles: bavotasan.com Method (with special adaptations by ericrasch.com) */
-/* -------------------- Source: http://bavotasan.com/2011/style-select-box-using-only-css/ */
-
-.city {
-    color: grey;
-     background: linear-gradient(white,#ccc); 
-    border-radius: 4px;
-    font-size: 20px;
-    padding: 20px;
-    width: 550px;
-    height: 60px;
-    align-content: center;
-    margin-top: 0px;
-
-}
-
-/* Second step page*/
 .content_section {
     color:white;
     background:url('../pexels-photo-29773.jpg') no-repeat center center;
-       height: 15vw;
-       width: 100vw;
+       background-size: 100%;
+       height: 10vw;
        font-size: 18px;
        text-align: left;
        display: none;
        border-bottom: 2px solid white;
-       margin: 0;
-       padding: 0;
-       font-size: 20px;
-
+       margin-top: 0;
 }
 
 .colors{
     background: #ccc;
     margin: 0;
-    height: 100vw;
-    width: 100vw;
+    height: 100%;
     display: none;
 
 }
-.output {
-    width: 100vw;
-}
-.city2 {
-    color: white;
-    background: linear-gradient(white,#ccc); 
-    box-shadow: 10px 10px 10px white;
+/* -------------------- Select Box Styles: bavotasan.com Method (with special adaptations by ericrasch.com) */
+/* -------------------- Source: http://bavotasan.com/2011/style-select-box-using-only-css/ */
+
+select {
+    color: grey;
+     background: linear-gradient(white,#ccc); 
     border-radius: 4px;
-    padding: 20px;
-    width: 250px;
-    height: 30px;
-    margin-top: 0px;
- float: right;
- margin-left:20px;
+    font-size: 20px;
+    padding: 30px;
+    width: 550px;
+    height: 60px;
+    vertical-align: center;
+    align-content: center;
 
 }
-
-canvas {
-    height: 200px;
-    width: 200px;
-}
-
 /*keyframes*/
 @keyframes bounceIn {
   0% {
